==> cruwaller/stm32-logicanalyzer-base/src/hal/stm32f7xx.cpp <==
#include "platform.h"
#include "priorities.h"
#include "stm32_def.h"
#include <stm32f7xx_ll_dma.h>

uint32_t dma_channel_get(uint32_t periph, uint8_t type, uint8_t index)
{
    // Return stream instead
    /* DMA2 */
    if (periph == USART1_BASE)
        return (type == DMA_USART_RX) ? LL_DMA_STREAM_2 : LL_DMA_STREAM_7;
    else if (periph == USART6_BASE)
        return (type == DMA_USART_RX) ? LL_DMA_STREAM_1 : LL_DMA_STREAM_6;
    /* DMA1 */
    else if (periph == USART2_BASE)
        return (type == DMA_USART_RX) ? LL_DMA_STREAM_5 : LL_DMA_STREAM_6;
    else if (periph == USART3_BASE)
        return (type == DMA_USART_RX) ? LL_DMA_STREAM_1 : LL_DMA_STREAM_3;
    else if (periph == UART4_BASE)
        return (type == DMA_USART_RX) ? LL_DMA_STREAM_2 : LL_DMA_STREAM_4;
    else if (periph == UART5_BASE)
        return (type == DMA_USART_RX) ? LL_DMA_STREAM_0 : LL_DMA_STREAM_7;
    return 0xff;
}

uint32_t dma_irq_get(uint32_t periph, uint8_t type, uint8_t index)
{
    /* DMA2 */
    if (periph == USART1_BASE)
        return (type == DMA_USART_RX) ? DMA2_Stream2_IRQn : DMA2_Stream7_IRQn;
    else if (periph == USART6_BASE)
        return (type == DMA_USART_RX) ? DMA2_Stream1_IRQn : DMA2_Stream6_IRQn;
    /* DMA1 */
    else if (periph == USART2_BASE)
        return (type == DMA_USART_RX) ? DMA1_Stream5_IRQn : DMA1_Stream6_IRQn;
    else if (periph == USART3_BASE)
        return (type == DMA_USART_RX) ? DMA1_Stream1_IRQn : DMA1_Stream3_IRQn;
    else if (periph == UART4_BASE)
        return (type == DMA_USART_RX) ? DMA1_Stream2_IRQn : DMA1_Stream4_IRQn;
    else if (periph == UART5_BASE)
        return (type == DMA_USART_RX) ? DMA1_Stream0_IRQn : DMA1_Stream7_IRQn;
    return 0xff;
}
