==> cruwaller/stm32-logicanalyzer-base/src/hal/stm32f3xx.cpp <==
#include "stm32_def.h"
#include "priorities.h"
#include "platform.h"
#include <stm32f3xx_ll_dma.h>

uint32_t dma_channel_get(uint32_t periph, uint8_t type, uint8_t index)
{
    if (periph == USART1_BASE)
        return (type == DMA_USART_RX) ? LL_DMA_CHANNEL_5 : LL_DMA_CHANNEL_4;
    else if (periph == USART2_BASE)
        return (type == DMA_USART_RX) ? LL_DMA_CHANNEL_6 : LL_DMA_CHANNEL_7;
    else if (periph == USART3_BASE)
        return (type == DMA_USART_RX) ? LL_DMA_CHANNEL_3 : LL_DMA_CHANNEL_2;
#if defined(UART4_BASE) && defined(DMA2_BASE)
    else if (periph == UART4_BASE)
        return (type == DMA_USART_RX) ? LL_DMA_CHANNEL_3 : LL_DMA_CHANNEL_5;
#endif
    return 0xff;
}

uint32_t dma_irq_get(uint32_t periph, uint8_t type, uint8_t index)
{
    if (periph == USART1_BASE)
        return (type == DMA_USART_RX) ? DMA1_Channel5_IRQn : DMA1_Channel4_IRQn;
    else if (periph == USART2_BASE)
        return (type == DMA_USART_RX) ? DMA1_Channel6_IRQn : DMA1_Channel7_IRQn;
    else if (periph == USART3_BASE)
        return (type == DMA_USART_RX) ? DMA1_Channel3_IRQn : DMA1_Channel2_IRQn;
#if defined(UART4_BASE) && defined(DMA2_BASE)
    else if (periph == UART4_BASE)
        return (type == DMA_USART_RX) ? DMA2_Channel3_IRQn : DMA2_Channel5_IRQn;
#endif
    return 0xff;
}
